kubernetes/apps/components/seerr/components/prod/public-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr-public
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/controller: "disabled"
spec:
  parentRefs:
    - name: public-eg
      namespace: envoy-gateway-system
  hostnames:
    - seerr.${HOMELAB_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seerr-seerr-chart
          port: 80
